--- a/KDIC/Base.lproj/Main_iPhone.storyboard
+++ b/KDIC/Base.lproj/Main_iPhone.storyboard
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11762" systemVersion="16D32" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="Kxw-KQ-feo">
-    <device id="retina4_7" orientation="portrait">
+    <device id="retina5_5" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
@@ -19,30 +19,16 @@
                         <viewControllerLayoutGuide type="bottom" id="T5f-9z-aEn"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="HXj-Gx-XXa">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <navigationBar contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="gGc-5p-WH5">
-                                <rect key="frame" x="0.0" y="-10" width="375" height="66"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="66" id="Qov-p1-YiJ"/>
-                                </constraints>
-                                <color key="barTintColor" red="0.76078431372549016" green="0.050980392156862744" blue="0.082352941176470587" alpha="1" colorSpace="calibratedRGB"/>
-                                <textAttributes key="titleTextAttributes">
-                                    <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="23"/>
-                                    <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                </textAttributes>
-                                <items>
-                                    <navigationItem title="KDIC 88.5" id="Yew-RV-Dck"/>
-                                </items>
-                            </navigationBar>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="aK6-qT-MkF">
-                                <rect key="frame" x="0.0" y="598" width="375" height="69"/>
+                                <rect key="frame" x="0.0" y="668" width="414" height="68"/>
                                 <subviews>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="P3w-bE-TyM">
-                                        <rect key="frame" x="131" y="19" width="112" height="30"/>
+                                        <rect key="frame" x="151.66666666666669" y="19" width="112.00000000000006" height="30"/>
                                         <constraints>
-                                            <constraint firstAttribute="width" constant="112" id="1i3-RM-hQv"/>
+                                            <constraint firstAttribute="width" constant="112" id="los-Ne-gLM"/>
                                         </constraints>
                                         <state key="normal" title="Play">
                                             <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -54,25 +40,36 @@
                                 </subviews>
                                 <color key="backgroundColor" red="0.10196078431372549" green="0.10196078431372549" blue="0.10196078431372549" alpha="1" colorSpace="calibratedRGB"/>
                                 <constraints>
-                                    <constraint firstItem="P3w-bE-TyM" firstAttribute="top" secondItem="aK6-qT-MkF" secondAttribute="top" constant="19" id="fTl-yK-0aC"/>
-                                    <constraint firstItem="P3w-bE-TyM" firstAttribute="centerY" secondItem="aK6-qT-MkF" secondAttribute="centerY" id="ff6-Ag-P0d"/>
-                                    <constraint firstItem="P3w-bE-TyM" firstAttribute="centerX" secondItem="aK6-qT-MkF" secondAttribute="centerX" id="qsW-eY-EB0"/>
+                                    <constraint firstItem="P3w-bE-TyM" firstAttribute="centerX" secondItem="aK6-qT-MkF" secondAttribute="centerX" id="A2C-m7-Wnr"/>
+                                    <constraint firstItem="P3w-bE-TyM" firstAttribute="centerY" secondItem="aK6-qT-MkF" secondAttribute="centerY" id="Amm-ur-AS4"/>
+                                    <constraint firstItem="P3w-bE-TyM" firstAttribute="top" secondItem="aK6-qT-MkF" secondAttribute="top" constant="19" id="G8z-uS-jX1"/>
                                 </constraints>
                             </view>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="w0E-vF-vf1">
-                                <rect key="frame" x="0.0" y="56" width="375" height="450"/>
-                            </imageView>
+                            <navigationBar contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="gGc-5p-WH5">
+                                <rect key="frame" x="0.0" y="-10" width="414" height="66"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="66" id="5nl-Cy-VCV"/>
+                                </constraints>
+                                <color key="barTintColor" red="0.76078431372549016" green="0.050980392156862744" blue="0.082352941176470587" alpha="1" colorSpace="calibratedRGB"/>
+                                <textAttributes key="titleTextAttributes">
+                                    <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="23"/>
+                                    <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                </textAttributes>
+                                <items>
+                                    <navigationItem title="KDIC 88.5" id="Yew-RV-Dck"/>
+                                </items>
+                            </navigationBar>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="BLj-T9-IMm">
-                                <rect key="frame" x="0.0" y="506" width="375" height="101"/>
+                                <rect key="frame" x="0.0" y="582" width="414" height="87"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Wednesdays 7:00PM to 8:00PM" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tlk-vg-xvh">
-                                        <rect key="frame" x="16" y="64" width="331" height="29"/>
+                                        <rect key="frame" x="16" y="64" width="331" height="16"/>
                                         <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="13"/>
                                         <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="It Came From Beneath Grinnell" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="p24-6h-Nk6">
-                                        <rect key="frame" x="16" y="8" width="331" height="73"/>
+                                        <rect key="frame" x="16" y="8" width="331" height="60"/>
                                         <fontDescription key="fontDescription" name="HelveticaNeue-Light" family="Helvetica Neue" pointSize="25"/>
                                         <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <nil key="highlightedColor"/>
@@ -80,32 +77,34 @@
                                 </subviews>
                                 <color key="backgroundColor" red="0.50565719604492188" green="0.50947946310043335" blue="0.53017741441726685" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
-                                    <constraint firstItem="p24-6h-Nk6" firstAttribute="trailing" secondItem="tlk-vg-xvh" secondAttribute="trailing" id="5bC-FR-5vH"/>
-                                    <constraint firstItem="tlk-vg-xvh" firstAttribute="bottom" secondItem="BLj-T9-IMm" secondAttribute="bottomMargin" id="BU6-hG-Adm"/>
-                                    <constraint firstItem="p24-6h-Nk6" firstAttribute="leading" secondItem="tlk-vg-xvh" secondAttribute="leading" id="MpE-t1-afc"/>
-                                    <constraint firstItem="p24-6h-Nk6" firstAttribute="leading" secondItem="BLj-T9-IMm" secondAttribute="leading" constant="16" id="Qs4-Rs-tX9"/>
-                                    <constraint firstItem="p24-6h-Nk6" firstAttribute="top" secondItem="BLj-T9-IMm" secondAttribute="topMargin" id="RTN-8N-iCM"/>
-                                    <constraint firstItem="tlk-vg-xvh" firstAttribute="top" secondItem="BLj-T9-IMm" secondAttribute="top" constant="64" id="Tfq-6o-pqI"/>
-                                    <constraint firstAttribute="bottom" secondItem="p24-6h-Nk6" secondAttribute="bottom" constant="20" id="ubp-WV-3kW"/>
+                                    <constraint firstAttribute="bottom" secondItem="tlk-vg-xvh" secondAttribute="bottom" constant="7" id="KEH-7A-zDe"/>
+                                    <constraint firstItem="p24-6h-Nk6" firstAttribute="leading" secondItem="BLj-T9-IMm" secondAttribute="leading" constant="16" id="Y96-vq-Dho"/>
+                                    <constraint firstAttribute="bottom" secondItem="p24-6h-Nk6" secondAttribute="bottom" constant="19" id="ayB-Ie-MtY"/>
+                                    <constraint firstItem="p24-6h-Nk6" firstAttribute="leading" secondItem="tlk-vg-xvh" secondAttribute="leading" id="cZh-rQ-BIK"/>
+                                    <constraint firstItem="tlk-vg-xvh" firstAttribute="top" secondItem="BLj-T9-IMm" secondAttribute="top" constant="64" id="eYo-Pd-pTl"/>
+                                    <constraint firstItem="p24-6h-Nk6" firstAttribute="trailing" secondItem="tlk-vg-xvh" secondAttribute="trailing" id="hCE-is-CrS"/>
+                                    <constraint firstItem="p24-6h-Nk6" firstAttribute="top" secondItem="BLj-T9-IMm" secondAttribute="topMargin" id="m45-hg-kY7"/>
                                 </constraints>
                             </view>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="w0E-vF-vf1">
+                                <rect key="frame" x="0.0" y="56" width="414" height="527"/>
+                            </imageView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="gGc-5p-WH5" firstAttribute="trailing" secondItem="w0E-vF-vf1" secondAttribute="trailing" id="9zw-xI-7NG"/>
-                            <constraint firstItem="BLj-T9-IMm" firstAttribute="top" secondItem="w0E-vF-vf1" secondAttribute="bottom" id="Eh6-DN-2c6"/>
-                            <constraint firstItem="gGc-5p-WH5" firstAttribute="top" secondItem="HXj-Gx-XXa" secondAttribute="topMargin" constant="-10" id="Hkh-hW-6e2"/>
-                            <constraint firstItem="BLj-T9-IMm" firstAttribute="trailing" secondItem="aK6-qT-MkF" secondAttribute="trailing" id="OGD-NS-tAb"/>
-                            <constraint firstItem="aK6-qT-MkF" firstAttribute="bottom" secondItem="T5f-9z-aEn" secondAttribute="top" id="PbU-A1-zrn"/>
-                            <constraint firstItem="gGc-5p-WH5" firstAttribute="leading" secondItem="w0E-vF-vf1" secondAttribute="leading" id="RDh-A8-gB0"/>
-                            <constraint firstItem="w0E-vF-vf1" firstAttribute="leading" secondItem="BLj-T9-IMm" secondAttribute="leading" id="f0h-4d-C1O"/>
-                            <constraint firstItem="aK6-qT-MkF" firstAttribute="top" secondItem="w0E-vF-vf1" secondAttribute="bottom" constant="92" id="gMe-rV-7gM"/>
-                            <constraint firstItem="w0E-vF-vf1" firstAttribute="trailing" secondItem="BLj-T9-IMm" secondAttribute="trailing" id="m76-YA-hxt"/>
-                            <constraint firstItem="BLj-T9-IMm" firstAttribute="leading" secondItem="aK6-qT-MkF" secondAttribute="leading" id="oil-dc-6yA"/>
-                            <constraint firstAttribute="trailing" secondItem="w0E-vF-vf1" secondAttribute="trailing" id="pg2-dE-6ss"/>
-                            <constraint firstItem="w0E-vF-vf1" firstAttribute="top" secondItem="gGc-5p-WH5" secondAttribute="bottom" id="s5W-C8-0RA"/>
-                            <constraint firstItem="w0E-vF-vf1" firstAttribute="leading" secondItem="HXj-Gx-XXa" secondAttribute="leading" id="taI-sT-RXf"/>
-                            <constraint firstItem="T5f-9z-aEn" firstAttribute="top" secondItem="BLj-T9-IMm" secondAttribute="bottom" constant="60" id="zuO-UT-Vb6"/>
+                            <constraint firstItem="BLj-T9-IMm" firstAttribute="leading" secondItem="aK6-qT-MkF" secondAttribute="leading" id="2DH-k0-Y94"/>
+                            <constraint firstItem="gGc-5p-WH5" firstAttribute="top" secondItem="HXj-Gx-XXa" secondAttribute="topMargin" constant="-10" id="2gr-9F-Z9J"/>
+                            <constraint firstItem="w0E-vF-vf1" firstAttribute="leading" secondItem="BLj-T9-IMm" secondAttribute="leading" id="4r7-Ne-g4v"/>
+                            <constraint firstItem="w0E-vF-vf1" firstAttribute="top" secondItem="gGc-5p-WH5" secondAttribute="bottom" id="6JB-zG-kuV"/>
+                            <constraint firstItem="gGc-5p-WH5" firstAttribute="leading" secondItem="w0E-vF-vf1" secondAttribute="leading" id="F4s-DG-31v"/>
+                            <constraint firstItem="w0E-vF-vf1" firstAttribute="leading" secondItem="HXj-Gx-XXa" secondAttribute="leading" id="Jh8-Uf-Uqi"/>
+                            <constraint firstItem="BLj-T9-IMm" firstAttribute="trailing" secondItem="aK6-qT-MkF" secondAttribute="trailing" id="QvM-22-IgD"/>
+                            <constraint firstItem="aK6-qT-MkF" firstAttribute="bottom" secondItem="T5f-9z-aEn" secondAttribute="top" id="Y6N-9y-cc6"/>
+                            <constraint firstItem="T5f-9z-aEn" firstAttribute="top" secondItem="BLj-T9-IMm" secondAttribute="bottom" constant="67" id="d8E-sx-ScE"/>
+                            <constraint firstItem="w0E-vF-vf1" firstAttribute="trailing" secondItem="BLj-T9-IMm" secondAttribute="trailing" id="h4Y-Z4-l8r"/>
+                            <constraint firstItem="aK6-qT-MkF" firstAttribute="top" secondItem="w0E-vF-vf1" secondAttribute="bottom" constant="85" id="uIO-HQ-0ga"/>
+                            <constraint firstAttribute="trailing" secondItem="w0E-vF-vf1" secondAttribute="trailing" id="ud2-jV-9zi"/>
+                            <constraint firstItem="gGc-5p-WH5" firstAttribute="trailing" secondItem="w0E-vF-vf1" secondAttribute="trailing" id="w9B-zC-NoQ"/>
                         </constraints>
                     </view>
                     <connections>
@@ -116,7 +115,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="0Wn-uj-NTR" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1124" y="16.641679160419791"/>
+            <point key="canvasLocation" x="1122.4000000000001" y="15.742128935532236"/>
         </scene>
     </scenes>
     <color key="tintColor" red="0.80015623569488525" green="0.0" blue="0.037187442183494568" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
